Bug 391054 - Krita Crash after changing tablet settings
Summary: Krita Crash after changing tablet settings
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 4.0.0-beta.1
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-25 16:23 UTC by Peter Mueller
Modified: 2019-04-18 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita crash log (44.91 KB, text/plain)
2018-02-25 16:23 UTC, Peter Mueller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Mueller 2018-02-25 16:23:49 UTC
Created attachment 110991 [details]
Krita crash log

Just had a krita crash. In the doc's you asked for a kritacrash.log ... well, here it is :-)

I think, I switched some Wacom tablet settings (from the outside).

I'm using "krita-nightly-x64-v4.0.0.51-460-ge72f2bdea2-setup".
Comment 1 Alvin Wong 2018-02-25 16:35:40 UTC
Hm, the backtrace looks very similar to the one in bug 389688... this is weird...

Can you try to get a tablet log? Use the mouse to start Krita, and only use the stylus after you started the tablet log by pressing Ctrl+Shift+T.

May I ask what Wacom settings have you changed?

I had a feeling that bug 389688 could be caused by a driver conflict... but now I don't really know what to suspect...
Comment 2 Peter Mueller 2018-02-25 19:11:37 UTC
If I remember correctly, I changed the setting for pressure sensitivity and compatibility to older devices (i.e., it was set to compatibility (1024 levels) and I switched it off).

In the referenced bug, you wrote in a comment that you received pressure values higher than 1 ... maybe switching caused something similar (especially when done while Krita is running).

Sorry, I'm not able to reproduce the crash.
Comment 3 Peter Mueller 2018-02-25 19:12:40 UTC
Btw: Many Kudos for being so responsive. Even on Sunday. This is really cool.
Comment 4 Alvin Wong 2018-02-26 12:58:05 UTC
(In reply to Peter Mueller from comment #2)
> If I remember correctly, I changed the setting for pressure sensitivity and
> compatibility to older devices (i.e., it was set to compatibility (1024
> levels) and I switched it off).
> 
> In the referenced bug, you wrote in a comment that you received pressure
> values higher than 1 ... maybe switching caused something similar
> (especially when done while Krita is running).
> 
> Sorry, I'm not able to reproduce the crash.

Ah, did you switch off that setting in the Wacom settings while Krita is opened? If this is true, then it would be due to the WinTab support code not being able to dynamically refresh the tablet configuration, which is in some way related to bug 374336.

I can't test this because my Intuos Pen & Touch only supports 1024 pressure levels.


(In reply to Peter Mueller from comment #3)
> Btw: Many Kudos for being so responsive. Even on Sunday. This is really cool.

I would like to point out that I'm usually only responsive during weekends, and it was technically Monday when I made my previous reply.
Comment 5 Halla Rempt 2018-02-27 10:09:51 UTC
Hm, the crash appears to be in KisActionManager::updateGui, which isn't related to tablet stuff at all. Pity we have no line numbers... However, I suspect it's the place where the viewManager is accessed outside the if (d->viewManager) block.
Comment 6 Halla Rempt 2018-02-27 10:11:28 UTC
Git commit dddd82f6c12ce0861763eb7203fdbe9a42108e4d by Boudewijn Rempt.
Committed on 27/02/2018 at 10:10.
Pushed by rempt into branch 'master'.

Move the check d->viewManager->selectionEditable()

This should be inside the if (d->viewManager) {} block, not outside.

M  +13   -18   libs/ui/kis_action_manager.cpp

https://commits.kde.org/krita/dddd82f6c12ce0861763eb7203fdbe9a42108e4d
Comment 7 Alvin Wong 2018-02-27 10:12:59 UTC
(In reply to Boudewijn Rempt from comment #5)
> Hm, the crash appears to be in KisActionManager::updateGui, which isn't
> related to tablet stuff at all. Pity we have no line numbers... However, I
> suspect it's the place where the viewManager is accessed outside the if
> (d->viewManager) block.

I think that is another unrelated crash. The u issue reported should be about the second backtrace in the file.
Comment 8 Halla Rempt 2018-02-27 10:22:18 UTC
Ah, okay. Well the first one should be fixed then :-)
Comment 9 Peter Mueller 2018-02-27 18:36:10 UTC
(In reply to Alvin Wong from comment #4)
> (In reply to Peter Mueller from comment #2)
> > If I remember correctly, I changed the setting for pressure sensitivity and
> > compatibility to older devices (i.e., it was set to compatibility (1024
> > levels) and I switched it off).
> > 
> > In the referenced bug, you wrote in a comment that you received pressure
> > values higher than 1 ... maybe switching caused something similar
> > (especially when done while Krita is running).
> > 
> > Sorry, I'm not able to reproduce the crash.
> 
> Ah, did you switch off that setting in the Wacom settings while Krita is
> opened? If this is true, then it would be due to the WinTab support code not
> being able to dynamically refresh the tablet configuration, which is in some
> way related to bug 374336.

Yes. Krita was running while I switched it off.

> 
> I can't test this because my Intuos Pen & Touch only supports 1024 pressure
> levels.
> 
> 
> (In reply to Peter Mueller from comment #3)
> > Btw: Many Kudos for being so responsive. Even on Sunday. This is really cool.
> 
> I would like to point out that I'm usually only responsive during weekends,
> and it was technically Monday when I made my previous reply.
Comment 10 Dmitry Kazakov 2019-04-18 12:47:36 UTC
Git commit 1d21ae2113fba7c1f7a011db434f1b8c21b591a3 by Dmitry Kazakov.
Committed on 18/04/2019 at 12:46.
Pushed by dkazakov into branch 'master'.

Fix updating tablet pressure resolution on every proximity enter event

The user can switch pressure sensitivity level in the driver,
which will make our saved values invalid (this option is
provided by Wacom drivers for compatibility reasons, and
it can be adjusted on the fly)

A  +38   -0    3rdparty/ext_qt/0028-Fix-updating-tablet-pressure-resolution-on-every-pro.patch
M  +1    -0    3rdparty/ext_qt/CMakeLists.txt

https://commits.kde.org/krita/1d21ae2113fba7c1f7a011db434f1b8c21b591a3